# 2d-game

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/content/entities/: CMakeLists.txt
src/content/entities/entities-interfaces/: CMakeLists.txt  IGuiComponent.hpp  IManageable.hpp  IState.hpp
src/content/entities/game-objects/: CMakeLists.txt  IGameObject.hpp  PlayerGameObject.hpp  RockGameObject.cpp
src/content/entities/gui-components/: CMakeLists.txt  Cursor.cpp  Cursor.hpp
src/content/entities/states/: CMakeLists.txt  GamePlayState.cpp  GamePlayState.hpp  InventoryState.cpp  InventoryState.hpp
src/content/entities/tiles/: CMakeLists.txt  ITile.cpp  ITile.hpp  SandTile.cpp  TileConsts.cpp  TileConsts.hpp
src/content/managers/: AManager.cpp  AManager.hpp  CMakeLists.txt  GameObjectsManagerException.hpp  GuiManager.cpp  GuiManager.hpp  StatesManager.cpp  StatesManager.hpp  TexturesManager.cpp  TexturesManagerException.cpp  TilesManager.cpp  TilesManager.hpp
src/core/: CMakeLists.txt
src/filesystem/: TexturesLoader.cpp
src/game-objects/: CMakeLists.txt  Direction.hpp  GameObjectMover.cpp  GameObjectMover.hpp  IGameObject.hpp  PlayerGameObject.cpp  PlayerGameObject.hpp  RockGameObject.hpp
src/log/: CMakeLists.txt  Log.cpp  Log.hpp
src/managers/: CMakeLists.txt  GameObjectsManager.cpp  GameObjectsManager.hpp  GameObjectsManagerException.cpp  TexturesManager.hpp  TexturesManagerException.hpp  TilesManager.cpp  TilesManager.hpp
src/map/: CMakeLists.txt  ITilesGenerator.hpp  RandomTileGenerator.cpp  RandomTileGenerator.hpp
src/system/: CMakeLists.txt
src/system/filesystem/: CMakeLists.txt  TexturesLoader.hpp
src/system/game-system/: CMakeLists.txt  Camera.cpp  Camera.hpp  DeltaTime.cpp  DeltaTime.hpp
src/tiles/: CMakeLists.txt  GrassTile.cpp  GrassTile.hpp  ITile.hpp  SandTile.hpp
test/: CMakeLists.txt
test/content/managers/: TEST_AManager.cpp  TEST_GameObjectsManager.cpp  TEST_StatesManager.cpp  TEST_TexturesManager.cpp  TEST_TilesManager.cpp
test/core/: TEST_Camera.cpp  TEST_DeltaTime.cpp
test/game-objects/: TEST_GameObjectMover.cpp
test/managers/: TEST_GameObjectsManager.cpp  TEST_TexturesManager.cpp  TEST_TilesManager.cpp
test/map/: TEST_RandomTileGenerator.cpp
test/mocks/: MockAManager.cpp  MockAManager.hpp  MockGameObject.cpp  MockGameObject.hpp  MockIManageable.cpp  MockIManageable.hpp  MockIState.cpp  MockIState.hpp  MockTile.cpp  MockTile.hpp
test/system/game-system/: TEST_Camera.cpp
